--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Reggae+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap');
 
       body{
-      font-family: 'Reggae One', cursive;
+      font-family: 'Cormorant Garamond', serif;      
       padding:0px;
       margin: 0px;
       place-content: center;
       align-items:center;
-      background-color: #f2cf07;
-      background-image: linear-gradient(315deg, #f2cf07 0%, #55d284 74%);
+      background-color: #B2DBBF;
       
       }
       .logo{
         position: absolute;
-        width: 70%;
+        width: 30%;
         height: 15%;
-        left:15%;
+        left:35%;
         top:5%;
       }
 
@@ -495,20 +494,20 @@
       h1{
         margin-top: 0px;
         padding-top: 60px;
-        font-size: 90px;
+        font-size: 120px;
       }
       h5{
         font-size: 30px;
-        word-spacing: 50px;
+        word-spacing: 10px;
       }
 
       button{
         height: 90px;
-        width: 200px;
+        width: 170px;
         font-size: 40px;
         background-color: unset;
         border: 0px;
-        font-family: 'Reggae One', cursive;
+        font-family: 'Cormorant Garamond', serif;
         border-radius: 50%;
 
       }
