--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap');
 
       body{
-      font-family: 'Cormorant Garamond', serif;      
+        font-family: 'Lato', sans-serif;     
       padding:0px;
       margin: 0px;
       place-content: center;
@@ -307,7 +307,6 @@
       }
       .dog-card__reference{
       display:inline-block;
-
       border-bottom: 1px solid transparent;
       color:#0099ff;
       text-decoration:none;
@@ -506,9 +505,12 @@
         width: 170px;
         font-size: 40px;
         background-color: unset;
+        font-family: 'Lato', sans-serif;
+        position: relative;
         border: 0px;
-        font-family: 'Cormorant Garamond', serif;
-        border-radius: 50%;
+        background: none;
+        font-weight: 800;
+
 
       }
 
@@ -557,3 +559,67 @@
 
 
       }
+
+       button:hover{
+        border: 0px;
+      }
+      button:focus{
+        border: 0px;
+
+      }
+
+
+
+
+      .button{
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        opacity: 0;
+        left:0px;
+        bottom: 0px;
+
+      }
+
+      .button:hover{
+        opacity: 0.15;
+      }
+
+      button:focus { 
+        outline: none;
+        background-color: #B2DBBF;
+        background-size: 90%;
+        transform: translate(0.2em,-0.2em);
+        box-shadow: -1em 1em .15em transparentize(#B2DBBF,.2);
+      }
+
+      button {
+        position: relative;
+        top:-30px;
+        display: inline-block;
+        margin: 0 auto;
+      
+        -webkit-border-radius: 10px;
+        
+        -webkit-box-shadow: 
+            0px 3px rgba(128,128,128,1), /* gradient effects */
+            0px 4px rgba(118,118,118,1),
+            0px 5px rgba(108,108,108,1),
+            0px 6px rgba(98,98,98,1),
+            0px 7px rgba(88,88,88,1),
+            0px 8px rgba(78,78,78,1),
+            0px 14px 6px -1px rgba(128,128,128,1); /* shadow */
+        
+    } 
+    
+
+            button:active {
+                -webkit-box-shadow: 
+                    0px 3px rgba(128,128,128,1),
+                    0px 4px rgba(118,118,118,1),
+                    0px 5px rgba(108,108,108,1),
+                    0px 6px rgba(98,98,98,1),
+                    0px 7px rgba(88,88,88,1),
+                    0px 8px rgba(78,78,78,1),
+                    0px 10px 2px 0px rgba(128,128,128,.6); /* shadow */
+            }
