--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
       margin: 0px;
       place-content: center;
       align-items:center;
-      background-color: #B2DBBF;
       
       }
       .logo{
@@ -14,7 +13,7 @@
         width: 30%;
         height: 15%;
         left:35%;
-        top:5%;
+        bottom:83%;
       }
 
       .container{
@@ -116,7 +115,6 @@
         align-items: flex-end;
         flex-direction: row;
         transition: ease-in .3s;
-
 
       }
 
@@ -517,7 +515,6 @@
       img{
         height: 100%;
         width: 23.5%;
-        
       }
 
       .sale1{
@@ -623,3 +620,37 @@
                     0px 8px rgba(78,78,78,1),
                     0px 10px 2px 0px rgba(128,128,128,.6); /* shadow */
             }
+
+
+    .first_span{
+      position: absolute;
+      font-size: 20px;
+      text-align: center;
+      left: 5%;
+      opacity: 0.8;
+      bottom: -6%;
+    }
+    .second_span{
+      position: absolute;
+      font-size: 20px;
+      text-align: center;
+      left: 30%;
+      opacity: 0.8;
+      bottom: -6%;
+    }          
+    .third_span{
+      position: absolute;
+      font-size: 20px;
+      text-align: center;
+      left: 55%;
+      opacity: 0.8;
+      bottom: -7%;
+    }  
+    .fourth_span{
+      position: absolute;
+      font-size: 20px;
+      text-align: center;
+      left: 82%;
+      opacity: 0.8;
+      bottom: -7%;
+    }  
